--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -30,3 +30,4 @@
 @import "../components/Checkout/PriceInfo/priceInfo";
 @import "../components/Checkout/CheckoutProgress/checkoutProgress";
 @import "../components/footer/footer";
+@import "../components/Admin/Product/adminProducts";
